# aiti_guru_test

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/config/: settings.py  urls.py
backend/shop/: models.py  serializers.py  services.py  urls.py  views.py
backend/shop/management/commands/: fill_db.py
backend/shop/migrations/: 0001_enable_ltree.py  0001_initial.py  0002_initial.py
backend/shop/tests/: conftest.py  factories.py  test_services.py  test_views.py
sql/: sql_queries.sql
